--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0"
