--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "form-data": "^3.0.0",
