--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,8 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
