--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "selenium-webdriver": "^4.0.0-alpha.5"
