--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,6 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
-    "chromedriver": "^78.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -22,7 +21,6 @@
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "passport-jwt": "^4.0.0"
   }
 }
