--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0",
-    "sweetalert": "^2.1.2"
+    "reactstrap": "^8.1.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
