--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-chartjs-2": "^2.8.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^4.3.1",
