--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "react-avatar-edit": "^0.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
