--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,16 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.573.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "bluebird": "^3.7.1",
     "body-parser": "^1.19.0",
     "chromedriver": "^78.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "file-type": "^12.4.0",
     "form-data": "^3.0.0",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "multiparty": "^4.2.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
