--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,13 +10,14 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-avatar-edit": "^0.8.2",
     "react-chartjs-2": "^2.8.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.2.0",
-    "sweetalert": "^2.1.2",
-    "react-avatar-edit": "^0.8.2"
+    "reactstrap": "^8.1.1",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
