--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,6 @@
     "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": "^3.6.0"
   }
 }
